--- a/src/components/Portfolio/style.scss
+++ b/src/components/Portfolio/style.scss
@@ -1,10 +1,12 @@
 .portfolio {
 	padding-bottom: 120px;
+	overflow-x: hidden;
 }
 
 .gallery {
 	display: flex;
 	padding-top: calc(var(--index) * 8);
+	overflow-x: hidden;
 
 	@media (max-width: 767.98px) {
 		flex-direction: column;
