--- a/src/reset.scss
+++ b/src/reset.scss
@@ -11,6 +11,11 @@
 	box-sizing: border-box;
 }
 
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 /* Links */
 
 a, a:link, a:visited  {
